@@ -1,9 +1,12 @@
 package org.pmoi.business;
 
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.nio.file.Paths;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
 public class GeneOntologyMapper {
@@ -20,18 +23,30 @@ public class GeneOntologyMapper {
     }
 
     private void load() throws IOException {
-        Files.lines(Path.of("gene2go")).skip(1).forEach(l -> {
-            String[] data = l.split("\t");
-            internalDB.putIfAbsent(data[1], new HashSet<>());
-            internalDB.get(data[1]).add(data[2]);
-        });
-        Files.lines(Path.of("mart_export.txt")).skip(1)
-                .map(l -> l.split("\t"))
-                .filter(data -> data.length == 4)
-                .forEach(data -> {
-                    internalDB.putIfAbsent(data[3], new HashSet<>());
-                    internalDB.get(data[3]).add(data[1]);
-                });
+        if (Files.exists(Paths.get("GODB.obj"))) {
+            try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(new File("GODB.obj")))){
+                this.internalDB = (Map<String, Set<String>>) ois.readObject();
+            } catch (ClassNotFoundException e) {
+                e.printStackTrace();
+            }
+        } else {
+            Files.lines(Path.of("gene2go")).skip(1).forEach(l -> {
+                String[] data = l.split("\t");
+                internalDB.putIfAbsent(data[1], new HashSet<>());
+                internalDB.get(data[1]).add(data[2]);
+            });
+            Files.lines(Path.of("mart_export.txt")).skip(1)
+                    .map(l -> l.split("\t"))
+                    .filter(data -> data.length == 4)
+                    .forEach(data -> {
+                        internalDB.putIfAbsent(data[3], new HashSet<>());
+                        internalDB.get(data[3]).add(data[1]);
+                    });
+            try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(new File("GODB.obj")))){
+                oos.writeObject(internalDB);
+            }
+        }
+
     }
 
     public boolean checkMembranomeGO(String entrezID) {
